fix(Coachmark): accessibility improvements (#3615)
* WIP - a11y review for coachmark

* Added a definition for window.matchmedia

Was erroring out in tests

* Added escape functionlity
Added focus to primary buttons on complex stacked interactions

* Added a11y functionality
* restrictions for tab focusing when elements are offscreen

* Fixing button focus colors for themes.

* Removing unneeded linter comments

* chore(release): publish [skip ci]

 - stylelint-config-ibm-products@0.0.34
 - @carbon/ibm-cloud-cognitive-cdai@1.24.10
 - @carbon/ibm-cloud-cognitive-core@1.4.3
 - @carbon/ibm-products@1.61.0
 - @carbon/ibm-security@2.14.4

* fix(Datagrid): adhere to minWidth if provided (#3706)

* fix(Datagrid): semantically hide spacer col (#3723)

* fix(Datagrid): address resize end issues (#3746)

* fix: remove 'ring' class (#3750)

* chore(Datagrid): fix alignment of icon only columns to match guidance (#3757)

* fix: GuideBanner and InlineTip - export sub components (#3762)

* fix: export sub components

* fix: update guidebanner test

* fix: update guidebanner test

* chore(Datagrid): add/refactor col alignment tests (#3768)

* chore(Datagrid): refactor/add column alignment test

* chore: update copyright headers

* chore: directly assign columns

* fix(Datagrid): stop propagation of expander click event (#3770)

* chore(release): publish [skip ci]

 - @carbon/ibm-products@1.61.1

* Prettier issue

* cspell issues with class names

* Ooops deleted a class I needed.

* Review responses

* Design review changes

* Quick modification to the Fixed button icon

* Removing unneeded comments and commented out code

---------

--- a/packages/ibm-products/src/components/Coachmark/styles/_coachmark-dragbar.scss
+++ b/packages/ibm-products/src/components/Coachmark/styles/_coachmark-dragbar.scss
@@ -5,8 +5,6 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-/* stylelint-disable declaration-no-important */
-
 // Standard imports.
 @import '../../../global/styles/project-settings';
 @import '../../../global/styles/mixins';
@@ -16,52 +14,10 @@
 @mixin coachmark-dragbar {
   // The block part of our conventional BEM class names (blockClass__E--M).
   $block-class: #{$pkg-prefix}--coachmark-dragbar;
+  $handle-class: #{$pkg-prefix}--coachmark-dragbar__handle;
 
   .#{$block-class} {
     display: flex;
-
-    &__handle {
-      flex-grow: 1;
-      padding: $spacing-03 0 0 $spacing-03;
-      border: 0;
-      background-color: transparent;
-      text-align: left;
-
-      &:hover {
-        cursor: move;
-      }
-    }
-
-    &--close-btn {
-      width: $spacing-07;
-      height: $spacing-07;
-      margin-left: auto !important;
-
-      svg > path {
-        margin: 0;
-        fill: $inverse-01 !important;
-      }
-
-      &:hover {
-        background-color: $inverse-hover-ui !important;
-      }
-    }
-
-    &__light {
-      #{$block-class}--close-btn {
-        &:active {
-          background-color: $active-secondary;
-        }
-      }
-    }
-
-    &__dark {
-      #{$block-class}--close-btn {
-        &:active {
-          background-color: $button-tertiary-active;
-        }
-      }
-    }
 
     svg {
       color: $inverse-01;
